--- a/test site/css/Style.css
+++ b/test site/css/Style.css
@@ -14,18 +14,33 @@
 	display: inline-block;	
 	float: right;
 	}
-
-img {
-	width: 100%;
-	max-width: 100%;
-	height: auto;
-	vertical-align: middle;
-}
 .Center {
 	text-transform:uppercase;
 	text-align: center;
 	font-size: 5rem;
+	font-family: 'Gloria Hallelujah', cursive;
+	color: #07D848;
 }
 .col-lg-one-fourth{
 	width: 25%;
+	padding-left: 50px;
+}
+.footer{
+	color:#23D764
+}
+div{
+	font-family: 'Ranga', cursive;
+}
+
+.size {
+	widows: 100%;
+}
+
+.Grass {
+	width:100%;
+	height:300px;
+}
+.test{
+top: 50%;
+left: 50%;
 }
