--- a/test site/css/Style.css
+++ b/test site/css/Style.css
@@ -19,7 +19,7 @@
 	text-align: center;
 	font-size: 5rem;
 	font-family: 'Gloria Hallelujah', cursive;
-	color: #07D848;
+	color: #0018FF;
 }
 .col-lg-one-fourth{
 	width: 25%;
@@ -44,3 +44,6 @@ div{
 top: 50%;
 left: 50%;
 }
+.jumbotron {
+background-image: url("../img/Zoysia-Header.jpg");
+background-size: cover;}
